--- a/gradle/sample2/build.gradle
+++ b/gradle/sample2/build.gradle
@@ -1,1 +1,12 @@
 apply plugin: 'java'
+
+version = 1.0
+sourceCompatibility = 1.7
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'ua.vn.os.todo.ToDoApp'
+    }
+}
+
+
