--- a/gradle/sample2/build.gradle
+++ b/gradle/sample2/build.gradle
@@ -3,6 +3,13 @@ apply plugin: 'java'
 version = 1.0
 sourceCompatibility = 1.7
 
+repositories {
+	mavenCentral()
+}
+
+dependencies {
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
+}
 jar {
     manifest {
         attributes 'Main-Class': 'ua.vn.os.todo.ToDoApp'
