--- a/gradle/sample2/build.gradle
+++ b/gradle/sample2/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'java'
+apply plugin: 'war'
 
 version = 1.0
 sourceCompatibility = 1.7
@@ -9,11 +9,8 @@ repositories {
 
 dependencies {
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
-}
-jar {
-    manifest {
-        attributes 'Main-Class': 'ua.vn.os.todo.ToDoApp'
-    }
+	providedCompile 'javax.servlet:servlet-api:2.5'
+    runtime 'javax.servlet:jstl:1.1.2'
 }
 
 
