--- a/gradle/sample2/build.gradle
+++ b/gradle/sample2/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'war'
 apply plugin: 'jetty'
 
-version = 1.0
+version = version = new ProjectVersion(0, 1)
 sourceCompatibility = 1.7
+ext.versionFile = file('version.properties')
 
 repositories {
 	mavenCentral()
@@ -18,6 +19,57 @@ task wrapper(type: Wrapper) {
     gradleVersion = 1.12
 }
 
-task vrs << {
+task gradleVrs << {
+	println 'Before taks action...'
+}
+
+task srcCompability << {
+	println 'Source compatibility -> ' + project.sourceCompatibility
+}
+
+task vrs(dependsOn: [srcCompability, gradleVrs]) << {
 	println 'Project version -> ' + project.version
- }
+}
+
+task loadVersion {
+	project.version = readVersion()
+}
+
+loadVersion.finalizedBy vrs
+
+ProjectVersion readVersion() {
+
+	if(!versionFile.exists()) {
+        throw new GradleException("Required version file does not exist: $versionFile.canonicalPath")
+    }
+
+    Properties versionProps = new Properties()
+    versionFile.withInputStream { stream -> 
+    	versionProps.load(stream)
+    }
+    
+    new ProjectVersion(versionProps.major.toInteger(), versionProps.minor.toInteger(), versionProps.release.toBoolean())
+}
+
+class ProjectVersion {
+    Integer major
+    Integer minor
+    Boolean release
+
+    ProjectVersion(Integer major, Integer minor) {
+    this.major = major
+	this.minor = minor
+	this.release = Boolean.FALSE
+	}
+
+	ProjectVersion(Integer major, Integer minor, Boolean release) {
+	this(major, minor)
+	this.release = release
+	}
+
+	@Override
+	String toString() {
+		"$major.$minor${release ? '' : '-SNAPSHOT'}"
+	}
+}
+
