--- a/gradle/sample2/build.gradle
+++ b/gradle/sample2/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'groovy'
 apply plugin: 'war'
 apply plugin: 'jetty'
 
@@ -10,6 +11,8 @@ repositories {
 }
 
 dependencies {
+	compile gradleApi()
+    compile localGroovy()
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
 	providedCompile 'javax.servlet:servlet-api:2.5'
     runtime 'javax.servlet:jstl:1.1.2'
@@ -31,13 +34,12 @@ task loadVersion {
 	project.version = readVersion()
 }
 
-task makeReleaseVersion(group: 'versioning', description: 'Makes project a release version.') << {
-	version.release = true
-	ant.propertyfile(file: versionFile) {
-		entry(key: 'release', type: 'string', operation: '=', value: 'true')
-	}
+task makeReleaseVersion(type: ReleaseVersionTask) {
+	release = version.release
+	destFile = versionFile
 }
 
+makeReleaseVersion.finalizedBy loadVersion
 loadVersion.finalizedBy vrs
 
 ProjectVersion readVersion() {
