Make bild back up before creating new build

--- a/gradle/sample2/build.gradle
+++ b/gradle/sample2/build.gradle
@@ -39,6 +39,27 @@ task makeReleaseVersion(type: ua.vn.os.tasks.ReleaseVersionTask) {
 	destFile = versionFile
 }
 
+task createDistribution(type: Zip, dependsOn: makeReleaseVersion) {
+	from war.outputs.files
+
+	from(sourceSets*.allSource) {
+		into 'src'
+	}
+
+	from(rootDir) {
+		include versionFile.name
+	}
+}
+
+task backupReleaseDistribution(type: Copy) {
+	from createDistribution.outputs.files
+	into "$buildDir/backup"
+}
+
+task release(dependsOn: backupReleaseDistribution) << {
+	logger.quiet 'Releasing the project...'
+}
+
 makeReleaseVersion.finalizedBy loadVersion
 loadVersion.finalizedBy vrs
 
