--- a/gradle/sample2/build.gradle
+++ b/gradle/sample2/build.gradle
@@ -56,6 +56,35 @@ task backupReleaseDistribution(type: Copy) {
 	into "$buildDir/backup"
 }
 
+task incrementProjectVersion(group: 'versioning', description: 'Increment project version...') << {
+	String currentVersion = version.ma
+}
+
+tasks.addRule("Pattern: increment<Classifier>Version – Increments the project version classifier.") { 
+	String taskName -> 
+	if(taskName.startsWith('increment') && taskName.endsWith('Version')) {
+    	task(taskName) << {
+    		String classifier = (taskName - 'increment' - 'Version').toLowerCase()
+			String currentVersion = version.toString()
+
+			switch(classifier) {
+				case 'major': ++version.major
+					break
+				case 'minor': ++version.minor
+					break
+				default: throw new GradleException("Invalid version type '$classifier. Allowed types: ['Major', 'Minor']")
+			}
+		
+			String newVersion = version.toString()
+			logger.info "Incrementing $classifier project version: $currentVersion -> $newVersion"
+
+			ant.propertyfile(file: versionFile) {
+				entry(key: classifier, type: 'int', operation: '+', value: 1)
+			}
+		}
+	}
+}
+
 task release(dependsOn: backupReleaseDistribution) << {
 	logger.quiet 'Releasing the project...'
 }
